--- a/css/index.css
+++ b/css/index.css
@@ -1,25 +1,34 @@
 :root {
 	--cyan: #00fff7;
 	--blue: #8bacda;
-	--dark: #0d192b;
-	--dark-blue: #14253d;
+	--dark: #211437;
+	--dark-purple: #eaeaea;
+	--light-purple: #8254d2;
+	--hover-light-purple: #c29fff;
+	--black: #000000;
 	--white: #ffffff;
 }
 
-.color-white {
-	color: var(--white);
+.color-black {
+	color: var(--black);
 }
 
-.color-white:hover {
+.list-group-item {
 	color: var(--white);
+	background-color: var(--light-purple);
+}
+
+.list-group-item:hover {
+	color: var(--black);
+	background-color: var(--hover-light-purple);
 }
 
 .color-blue { 
-	color: var(--blue);
+	color: var(--light-purple);
 }
 
 .color-blue:hover { 
-	color: var(--white);
+	color: var(--black);
 }
 
 .color-cyan {
@@ -27,15 +36,19 @@
 }
 
 .color-cyan:hover {
-	color: var(--white);;
+	color: var(--black);;
 }
 
 .background-color-dark {
 	background-color: var(--dark);
 }
 
-.background-color-dark-blue {
-	background-color: var(--dark-blue);;
+.background-color-dark-purple {
+	background-color: var(--dark-purple);;
+}
+
+.background-color-light-purple {
+	background-color: var(--light-purple);;
 }
 
 .setoff {
